fix-progressbar-alignment

--- a/src/components/Skills/progressBar.css
+++ b/src/components/Skills/progressBar.css
@@ -46,7 +46,7 @@
 {
     .progressContainer
     {
-        height: 180vh;
+        height: 190vh;
         width: 100%;
     }
 }
